test-cases/final-dump/foreign_error.wybe
# test cases for error messages regarding foreign calls

pub def foreign1(x:int):int =
    foreign llvm no_such(x)

pub def foreign2(x:int, ?y:int) {
    foreign llvm no_such2(x, ?y)
}

pub def foreign3(x:int):int =
    foreign no_such_language blah(x)

pub def foreign4(x:int, y:int) {
    foreign no_such_language2 blah(x, ?y)
}

pub def foreign5(x:int):int =
    foreign llvm add(x)

pub def foreign6(x:int, y:int) {
    foreign llvm add(x, x, x, ?y)
}
